--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
 /* @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Playwrite+DE+VA+Guides&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Roboto+Slab:wght@100..900&display=swap"); */
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
-/* @import "rsuite/dist/rsuite.css"; */
 @import "tailwindcss";
 
 @theme {
   /* --font-roboto: "Roboto Serif", serif; */
-  font-family: "Roboto", sans-serif;
-  --color-main: #8161cc;
+  /* font-family: "Roboto", sans-serif; */
+  /* --color-main: #8161cc;
   --color-white: #ffffff;
   --color-background: #161d26;
   --color-subcard: #12181f;
@@ -21,7 +20,7 @@
   --color-Pending: #fb774a;
   --color-DownContainer: #332229;
   --color-Down: #ef5350;
-  --color-text: #c3cddb;
+  --color-text: #c3cddb; */
 }
 
 /****************************************Chrome, Safari, Edge, Opera ******************************************/
